optimize http performance: 200k+ prs